--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^2.28.0",
     "graphql": "^15.4.0",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
+    "react-big-calendar": "^0.40.0",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
